# cxg-census-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  facet-refresh.yml  live-smoke.yml  ontology-refresh.yml  release.yml
docs/: architecture.md  error-model.md  example-questions.md  limitations.md  ontology-resolution.md  operational-playbook.md  progress-and-cancellation.md  schema-drift-format.md  tool-reference.md  version-pinning.md
scripts/: diff_schema_versions.py  prewarm_ols_cache.py  refresh_facet_catalog.py  refresh_ontology_hints.py  validate_fixtures.py
src/cxg_census_mcp/: __init__.py  __main__.py  cancellation.py  config.py  errors.py  logging_setup.py  metrics.py  metrics_dump.py  progress.py  server.py
src/cxg_census_mcp/caches/: __init__.py  _sqlite_kv.py  census_handle.py  facet_cache.py  filter_lru.py  ols_cache.py  plan_cache.py
src/cxg_census_mcp/clients/: __init__.py  census.py  http.py  ols.py
src/cxg_census_mcp/data/: assay_aliases.json  facet_catalog.json  ols_seed_terms.json  ontology_hints.json  schema_drift.json  tissue_general_terms.json
src/cxg_census_mcp/execution/: __init__.py  caps.py  enrichment.py  preview.py  snippet_emitter.py  tier0_summary.py  tier1_obs.py  tier2_expression.py
src/cxg_census_mcp/models/: __init__.py  counts.py  errors.py  expression.py  filters.py  limits.py  ontology.py  previews.py  provenance.py
src/cxg_census_mcp/ontology/: __init__.py  expander.py  hierarchy.py  presence.py  registry.py  resolver.py  rewrites.py  tissue_router.py
src/cxg_census_mcp/planner/: __init__.py  _long_table.py  cardinality_estimator.py  cost_estimator.py  filter_spec.py  plan_store.py  query_plan.py  tier_router.py
src/cxg_census_mcp/prompts/: __init__.py  census_workflow.py  disambiguation_workflow.py
src/cxg_census_mcp/resources/: __init__.py  docs_errors.md  docs_limitations.md  docs_ontology.md  docs_progress.md  docs_schema.md  docs_workflow.md
src/cxg_census_mcp/tools/: __init__.py  _envelope.py  counting.py  diagnostics.py  discovery.py  expression.py  ontology_tools.py  previews.py  snippets.py
src/cxg_census_mcp/utils/: __init__.py  curie.py  identifiers.py  soma_filter.py  stable_hash.py  text_norm.py
tests/: conftest.py
tests/e2e/: test_live_smoke.py  test_server_dispatch.py
tests/fixtures/: ambiguity_cases.yaml  filter_cases.yaml  schema_drift_cases.yaml  tissue_routing_cases.yaml  tool_error_cases.yaml
tests/integration/: test_count_cells.py  test_diagnostics.py  test_discovery_tools.py  test_export_snippet.py  test_filter_cases.py  test_resolve_term_tool.py  test_resources_and_prompts.py  test_tool_smoke.py
tests/unit/: test_cardinality_estimator_pinned.py  test_cost_estimator_dataset_bound.py  test_curie.py  test_errors.py  test_expander_graceful_degradation.py  test_expansion_warnings.py  test_filter_spec.py  test_metrics.py  test_ols_cache.py  test_progress_cancellation.py  test_resolver_hint_overlay.py  test_resolver_ranking.py  test_schema_contract.py  test_schema_drift.py  test_soma_filter.py  test_sqlite_kv.py  test_stable_hash.py  test_text_norm.py  test_tier2_denominator.py  test_tier_router.py  test_tissue_router.py
